increased perm size